# keeper

./: .bzrignore  CMakeLists.txt  CTestCustom.cmake.in  HACKING  buildcoverage.sh
data/: CMakeLists.txt  com.canonical.keeper.service.in  helper-registry.json.in
debian/: changelog  control  copyright  keeper-cli.install  keeper-client-dev.install  keeper.install  keeper.postinst  libkeeper-client.install  qml-keeper.install  rules
include/client/: client.h  keeper-errors.h  keeper-items.h
include/helper/: backup-helper.h  data-dir-registry.h  helper.h  metadata.h  registry.h  restore-helper.h  static-registry.h
include/keeper/: errors.h
src/: CMakeLists.txt
src/backup/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  command-line-client-view.cpp  command-line-client-view.h  command-line-client.cpp  command-line-client.h  command-line.cpp  command-line.h  main.cpp
src/client/: CMakeLists.txt  client.cpp  items.cpp  keeper-client.cpp  keeper-client.h  keeper-client.pc.in  keeper-errors.cpp  keeper-items.cpp
src/client/qml-plugin/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir
src/helper/: CMakeLists.txt  backup-helper.cpp  data-dir-registry.cpp  exec-tool  folder-backup.sh.in  folder-restore.sh.in  helper-registry.cpp  helper-registry.json.in  helper.cpp  metadata.cpp  restore-helper.cpp  static-registry.cpp
src/helper/internal/: backup-helper-impl.cpp  backup-helper-impl.h
src/owncloud-test/: CMakeLists.txt  main.cpp  owncloud-test.cpp  owncloud-test.h
src/qdbus-stubs/: CMakeLists.txt  backend-utils.h  com.canonical.keeper.Helper.xml  com.canonical.keeper.User.xml  com.canonical.keeper.xml  dbus-types.h
src/service/: CMakeLists.txt  app-const.h  backup-choices.cpp  backup-choices.h  keeper-helper.cpp  keeper-helper.h  keeper-task-backup.cpp  keeper-task-backup.h  keeper-task-restore.cpp  keeper-task-restore.h  keeper-task.cpp  keeper-task.h  keeper-user.cpp  keeper-user.h  keeper.cpp  keeper.h  main.cpp  manifest.cpp  manifest.h  metadata-provider.h  metadata.cpp  metadata.h  possible-metadata-provider.cpp  possible-metadata-provider.h  restore-choices.cpp  restore-choices.h  task-manager.cpp  task-manager.h
src/service/private/: keeper-task_p.h
src/simple-helper/: CMakeLists.txt  helper-test.sh  main.cpp  simple-helper-defs.h
src/storage/: CMakeLists.txt  storage-factory.cpp  storage-factory.h  storage.cpp  storage.h
src/storage-framework/: CMakeLists.txt  downloader.h  main.cpp  sf-downloader.cpp  sf-downloader.h  sf-uploader.cpp  sf-uploader.h  storage_framework_client.cpp  storage_framework_client.h  test-sf.cpp  test-sf.h  uploader.h
src/storage/internal/: local-storage.cpp  local-storage.h
src/tar/: CMakeLists.txt  main.cpp  tar-builder.cpp  tar-builder.h  tar-creator-main.cpp  tar-creator.cpp  tar-creator.h  untar-main.cpp  untar.cpp  untar.h
src/test-restore/: CMakeLists.txt  main.cpp  test-restore-socket.cpp  test-restore-socket.h
src/util/: CMakeLists.txt  attributes.h  connection-helper.h  dbus-utils.cpp  dbus-utils.h  localisation.h  logging.cpp  logging.h  qhash-sharedptr.h  unix-signal-handler.cpp  unix-signal-handler.h
tests/: CMakeLists.txt  com_canonical_keeper.py
tests/copyright/: check_copyright.sh
tests/dbusmock/: CMakeLists.txt  fake-backup-helper.cpp  fake-backup-helper.h  fake-folder-helper.cpp  folder-helper.cpp  keeper-template-test.cpp  service-template-test.cpp
tests/fakes/: CMakeLists.txt  fake-backup-helper.cpp  fake-backup-helper.h  fake-restore-helper.cpp  fake-restore-helper.h  folder-restore.sh.in  helper-test.sh.in  inactive_helper.sh  restore-reader.cpp  restore-reader.h
tests/fakes/upstart/: CMakeLists.txt  com.ubuntu.Upstart0_6.Instance.xml  com.ubuntu.Upstart0_6.Job.xml  com.ubuntu.Upstart0_6.xml  main.cpp  upstart-defs.h  upstart-instance-mock.cpp  upstart-instance-mock.h  upstart-job-mock.cpp  upstart-job-mock.h  upstart-mock.cpp  upstart-mock.h
tests/headers/: CMakeLists.txt  check_public_headers.py
tests/helper/: CMakeLists.txt  helpers-test.cc
tests/integration/: CMakeLists.txt
tests/integration/helpers/: CMakeLists.txt  dbus-connection-test.cc  helper-registry.json.in  helpers-test-failure.cpp  helpers-test.cc  mir-mock.h  restore-test.cpp  state-change-test-manager.h  state-change-test.cpp  state-test-helper.h  test-helpers-base.cpp  test-helpers-base.h
tests/qdbus-stubs/: CMakeLists.txt  org.freedesktop.DBus.Properties.xml
tests/surface/: CMakeLists.txt
tests/surface/copyright/: CMakeLists.txt  check_copyright.sh
tests/surface/headers/: compile_headers.py
tests/surface/whitespace/: CMakeLists.txt  check_whitespace.py
tests/unit/: CMakeLists.txt
tests/unit/helper/: CMakeLists.txt  backup-helper-test.cpp  fake-helper.h  helper-test.cpp  helpers-test.cc  mir-mock.cpp  mir-mock.h  speed-test.cpp  state-change-test.cpp
tests/unit/manifest/: CMakeLists.txt  manifest-test.cpp
tests/unit/metadata/: CMakeLists.txt  metadata-json-test.cpp
tests/unit/metadata-providers/: CMakeLists.txt  user-dirs-test.cpp
tests/unit/storage/: test-factory.cpp
tests/unit/storage-framework/: CMakeLists.txt  create-uploader-test.cpp  folders-test.cpp
tests/unit/tar/: CMakeLists.txt  keeper-tar-create-invoke.sh.in  keeper-tar-create-test.cpp  keeper-tar-test.cpp  keeper-untar-test.cpp  ktc-invoke-nobus.sh.in  ktc-invoke-nofiles.sh.in  ktc-invoke.sh.in  ku-invoke-nobus.sh.in  ku-invoke.sh.in  tar-creator-libarchive-failure-test.cpp  tar-creator-test.cpp  untar-test.cpp
tests/utils/: CMakeLists.txt  dummy-file.cpp  dummy-file.h  file-utils.cpp  file-utils.h  keeper-dbusmock-fixture.h  main.cpp  storage-framework-local.cpp  storage-framework-local.h  xdg-user-dirs-sandbox.cpp  xdg-user-dirs-sandbox.h
